--- a/Mapi_template_page.html
+++ b/Mapi_template_page.html
@@ -7,13 +7,16 @@
   <title>Sample Test</title>
   <script src="assets/main.js"></script>
   <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
     <div class="top-bar">
-      <img id="topnav-Icon" src="https://img.icons8.com/nolan/64/truck.png" />
+      <img id="topnav-Icon" src="https://img.icons8.com/nolan/64/truck.png"
       <p> Free standard shipping with any $125 order (US retail orders only)</p>
     </div>
     <section class="content-nav">
@@ -49,6 +52,50 @@
     </nav>
   </header>
   <section class="image-carousel">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="images\SlidingImage1.jpg" alt="Promotion Image">
+      <div class="carousel-caption">
+        <h3>Mapi Products</h3>
+        <p>Emotional Balance Set</p>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="images\SlidingImage2.jpg" alt="Promotion Image">
+      <div class="carousel-caption">
+        <h3>Mapi Bundle</h3>
+        <p>Buy any 3 get 4th Free</p>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="images\SlidingImage3.jpg" alt="Promotion Image">
+      <div class="carousel-caption">
+        <h3>Mapi Product</h3>
+        <p>Worry Free Set</p>
+      </div>
+    </div>
+  </div>
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
   </section>
   <section class="main-content">
