--- a/Mapi_template_page.html
+++ b/Mapi_template_page.html
@@ -16,8 +16,7 @@
 <body>
   <header>
     <div class="top-bar">
-      <img id="topnav-Icon" src="https://img.icons8.com/nolan/64/truck.png"
-      <p> Free standard shipping with any $125 order (US retail orders only)</p>
+      <img id="topnav-Icon" src="https://img.icons8.com/nolan/64/truck.png" <p> Free standard shipping with any $125 order (US retail orders only)</p>
     </div>
     <section class="content-nav">
       <img id="mapi-Logo" src="images/MAPILogoGold2017.png" alt="logo">
@@ -53,54 +52,116 @@
   </header>
   <section class="image-carousel">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="images\SlidingImage1.jpg" alt="Promotion Image">
-      <div class="carousel-caption">
-        <h3>Mapi Products</h3>
-        <p>Emotional Balance Set</p>
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <a href="#"><img src="images\SlidingImage1.jpg" alt="Promotion Image"></a>
+          <div class="carousel-caption">
+            <h3>Mapi Products</h3>
+            <p>Emotional Balance Set</p>
+          </div>
+        </div>
+
+        <div class="item">
+          <a href="#"><img src="images\SlidingImage2.jpg" alt="Promotion Image"></a>
+          <div class="carousel-caption">
+            <h3>Mapi Bundle</h3>
+            <p>Buy any 3 get 4th Free</p>
+          </div>
+        </div>
+
+        <div class="item">
+          <a href="#"><img src="images\SlidingImage3.jpg" alt="Promotion Image"></a>
+          <div class="carousel-caption">
+            <h3>Mapi Product</h3>
+            <p>Worry Free Set</p>
+          </div>
+        </div>
       </div>
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-
-    <div class="item">
-      <img src="images\SlidingImage2.jpg" alt="Promotion Image">
-      <div class="carousel-caption">
-        <h3>Mapi Bundle</h3>
-        <p>Buy any 3 get 4th Free</p>
-      </div>
-    </div>
-
-    <div class="item">
-      <img src="images\SlidingImage3.jpg" alt="Promotion Image">
-      <div class="carousel-caption">
-        <h3>Mapi Product</h3>
-        <p>Worry Free Set</p>
-      </div>
-    </div>
-  </div>
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
   </section>
   <section class="main-content">
-    <p>hello</p>
+    <div class="mission-statement">
+    <p>Our mission at vpk by Maharishi Ayurveda is to serve your health needs with the best ayurvedic herbal products.</p>
+    <p>Through powerful formulations and ancient lifestyle tips, our aim is to bring balance to your body and life.</p>
+    </div>
+    <div class="review-section">
+      <div class="">
+        <p>What people are saying</p>
+        <img src="images/reviewimg1.jpg" alt="">
+        <h2>Name</h2>
+        <p>Myself, my husband and my two teenage children have been taking this product for the last 3 months and it certainly seems to have ...</p>
+        <a href="#">Read more</a>
+      </div>
+      <div class="">
+        <img src="images/reviewimg2.jpg" alt="">
+        <h2>Name</h2>
+        <p>I order 4 at a time to keep in stock at home and Office. I add it to soup, stir fry, and rice. Always an amazing taste!!! Healing ...</p>
+        <a href="#">Read more</a>
+      </div>
+      <div class="">
+        <img src="images/reviewimg3.jpg" alt="">
+        <h2>Name</h2>
+        <p>I am a 60 + year old women with very sensitive skin and develop a rash with most skin care products. VPK's face cream I like very ...</p>
+        <a href="#">Read more</a>
+      </div>
+    </div>
   </section>
+  <section class="lower-section">
+    <div class="product-ranges">
+      <h2>Our Prduct Ranges</h2>
+      <a href="#"><img src="images/topsellers.jpg" alt=""></a>
+      <caption><a href="#"></a></caption>
+      <a href="#"><img src="images/digestion.jpg " alt=""></a>
+      <caption><a href="#"></a></caption>
+      <a href="#"><img src="images/easy_self.jpg" alt=""></a>
+      <caption><a href="#"></a></caption>
+      <a href="#"><img src="images/emotional_bal.jpg" alt=""></a>
+      <caption><a href="#"></a></caption>
+    </div>
+    <div class="get-inspired">
+      <h2>Get inspired about your health</h2>
+      <a href="#"><img src="" alt=""></a>
+      <a href="#"><img src="" alt=""></a>
+      <a href="#"><img src="" alt=""></a>
+      <a href="#"><img src="" alt=""></a>
+    </div>
+    <div class="learn-more">
+      <h2>Learn more about Ayurvedic Lifestyle</h2>
+      <a href="#"><img src="" alt=""></a>
+      <a href="#"><img src="" alt=""></a>
+      <a href="#"><img src="" alt=""></a>
+    </div>
+    <hr>
+  </section>
+  <footer>
+    <div class="social-icons">
+
+    </div>
+    <div class="final-info">
+      <h2>YOUR AYURVEDIC LIFESTYLE GUIDE FOR A HEALTHY, ENERGIZED, RENEWED YOU</h2>
+      <p>vpk® by Maharishi Ayurveda wants to inspire you</p>
+      <p>get it weekly</p>
+
+    </div>
+
+  </footer>
 
 </body>
 
